Replace destroy button by remove button. Replace + button by DG-like button. Move some scoped css to css files. Split some specific combined css into multiple classes with default css. Make size of images and buttons the same, bit smaller. Fix alignment of inputs in planet edit box to the right. Use max attribute to fix size of inputs instead of width in css.

--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -45,12 +45,28 @@
     margin-bottom: $base-spacing;
 }
 
+.margin-left-small {
+    margin-left: $base-spacing / 2;
+}
+
+.vertical-align-bottom {
+    vertical-align: bottom;
+}
+
 .sticky {
     position: sticky;
 }
 
 .scroll {
     overflow: scroll;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
+.no-border {
+    border: none;
 }
 
 .left-panel {
